--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,7 +15,7 @@
   align-items: center;
   /* justify-content: space-between; */
 
-  padding: 12px 32px;
+  padding: 10px 16px;
 }
 
 /* ============================= */
